<resources>
    <string name="app_name">MyAppCalculation</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_sign">+/-</string>
    <string name="key_equals">=</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_time" >*</string>
    <string name="kye_division" >/</string>
    <string name="key_del" >Del</string>
    <string name="key_ac" >AC</string>
    <string name="key_settings" >settings</string>
    <string name="orientation" >Горизонтальная</string>
    <string name="language" >Русский</string>
    <string name="name_orientation">Ориентация</string>
    <string name="name_langyage">Язык</string>
    <string name="name_theme">Тема</string>
    <string name="theme">Ночь</string>
    <string name="theme_day">День</string>
    <string name="back">back</string>
</resources>