<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="389dp"
        android:layout_height="329dp"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints,MissingDefaultResource"
        tools:layout_editor_absoluteX="11dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_1"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_2"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_3"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_4"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_5"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_6"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_7"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_8"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_9"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/key_0"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/dot_color"
            android:text="@string/key_dot"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/plus_color"
            android:text="@string/key_plus"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"

            android:backgroundTint="@color/minus_color"
            android:text="@string/key_minus"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"

            android:backgroundTint="@color/division_color"
            android:text="@string/kye_division"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"

            android:backgroundTint="@color/times_color"
            android:text="@string/key_time"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_AC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"

            android:backgroundTint="@color/ac_color"
            android:text="@string/key_ac"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_delite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"

            android:backgroundTint="@color/delite_color"
            android:text="@string/key_del"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/equals_color"
            android:text="@string/key_equals"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/text_view_wight"
        android:layout_height="@dimen/text_view_height"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944"
        tools:ignore="MissingConstraints"
        android:textSize="@dimen/text_size_rezult"/>

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="@dimen/image_wight"
        android:layout_height="@dimen/image_height"
        android:layout_marginStart="@dimen/image_size"
        android:layout_marginTop="@dimen/image_size"
        android:background="@null"
        android:foregroundTint="@color/image_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        app:tint="@color/image_color"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/key_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>